fix(PlayButton): play button clipping in playlists

--- a/Comfy/app.scss
+++ b/Comfy/app.scss
@@ -1,55 +1,87 @@
-@forward 'assets/main';
-@forward 'assets/navbar';
-@forward 'assets/now_playing';
-@forward 'assets/settings';
-@forward 'assets/top_bar';
+@forward "assets/main";
+@forward "assets/navbar";
+@forward "assets/now_playing";
+@forward "assets/settings";
+@forward "assets/top_bar";
 
 :root {
-    --border-radius: 8px;
+  --border-radius: 8px;
 
-    button, input, img { border-radius: var(--border-radius);}
+  button,
+  button span,
+  input,
+  img {
+    border-radius: var(--border-radius);
+  }
 
-    // -- Other --
+  // -- Other --
 
-    // Red hearths
-    .main-trackList-rowHeartButton *:not([fill=none]), .control-button-heart *:not([fill=none]) { color: #d25050 !important;  fill: #d25050 !important;}
-    .main-trackList-rowSectionEnd .main-addButton-active, .main-trackList-rowSectionEnd .main-addButton-active:focus, .main-trackList-rowSectionEnd .main-addButton-active:hover { color: #d25050;}
+  // Red hearths
+  .main-trackList-rowHeartButton *:not([fill="none"]),
+  .control-button-heart *:not([fill="none"]) {
+    color: #d25050 !important;
+    fill: #d25050 !important;
+  }
+  .main-trackList-rowSectionEnd .main-addButton-active,
+  .main-trackList-rowSectionEnd .main-addButton-active:focus,
+  .main-trackList-rowSectionEnd .main-addButton-active:hover {
+    color: #d25050;
+  }
 
-    // Lyrics plus
-    .lyrics-lyricsContainer-LyricsBackground {
-        background-repeat: no-repeat;
-        background-size: cover;
-        -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6));
-        mask-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6));
-    }
+  // Lyrics plus
+  .lyrics-lyricsContainer-LyricsBackground {
+    background-repeat: no-repeat;
+    background-size: cover;
+    -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6));
+    mask-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6));
+  }
 
-    #context-menu {
-        overflow: hidden;
+  #context-menu {
+    overflow: hidden;
 
-        ul {
-            background-color: var(--spice-player);
+    ul {
+      background-color: var(--spice-player);
 
-            button, a {
-                border-radius: 0;
+      button,
+      a {
+        border-radius: 0;
 
-                &::before, &::after { content: none;}
-                &:not(.main-contextMenu-disabled):focus, &:not(.main-contextMenu-disabled):hover, &[aria-expanded=true] { background-color: #5c6eb12a; transition: 150ms background-color;}
-            }
+        &::before,
+        &::after {
+          content: none;
         }
-    }
-
-    #bookmark-menu {
-        background-color: var(--spice-player);
-        border-radius: var(--border-radius);
-
-        .bookmark-filter { background-color: var(--spice-player);}
-
-        button, a {
-            border-radius: 0;
-
-            &::before, &::after { content: none;}
-            &:not(.main-contextMenu-disabled):focus, &:not(.main-contextMenu-disabled):hover, &[aria-expanded=true] { background-color: #5c6eb12a; transition: 150ms background-color;}
+        &:not(.main-contextMenu-disabled):focus,
+        &:not(.main-contextMenu-disabled):hover,
+        &[aria-expanded="true"] {
+          background-color: #5c6eb12a;
+          transition: 150ms background-color;
         }
+      }
+    }
+  }
+
+  #bookmark-menu {
+    background-color: var(--spice-player);
+    border-radius: var(--border-radius);
+
+    .bookmark-filter {
+      background-color: var(--spice-player);
     }
 
+    button,
+    a {
+      border-radius: 0;
+
+      &::before,
+      &::after {
+        content: none;
+      }
+      &:not(.main-contextMenu-disabled):focus,
+      &:not(.main-contextMenu-disabled):hover,
+      &[aria-expanded="true"] {
+        background-color: #5c6eb12a;
+        transition: 150ms background-color;
+      }
+    }
+  }
 }
